# rubiks_racer

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_rubiks_racer.sh  rubicks_racer
src/: main.cpp
src/cube/: CMakeLists.txt  cube.cpp  cube.hpp  rotation.hpp  side.cpp  side.hpp  square.hpp
src/cube/tests/: CMakeLists.txt  cube_tests.cpp  side_tests.cpp
